@startuml
!theme plain
'--------------------------------------------------
' Diagramme ERD - Kotlin Monsters (Sprint 3)
'--------------------------------------------------

entity "Entraineur" as Entraineur {
 * id : INT <<PK>>
 --
 nom : VARCHAR(255)
 argents : INT
}

entity "EspeceMonstre" as EspeceMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  type : VARCHAR(255)
  baseAttaque : INT
  baseDefense : INT
  baseVitesse : INT
  baseAttaqueSpe : INT
  baseDefenseSpe : INT
  basePv : INT
  modAttaque : DECIMAL
  modDefense : DECIMAL
  modVitesse : DECIMAL
  modAttaqueSpe : DECIMAL
  modDefenseSpe : DECIMAL
  modPv : DECIMAL
  description : TEXT
  particularites : TEXT
  caracteres : TEXT
}

entity "Zone" as Zone {
* id : INT <<PK>>
--
nom : VARCHAR(255)
expZone : INT
--
fk_zoneSuivante_id : Int <<FK>>
fk_zonePrecedente_id : Int <<FK>>
}

entity "Zone_EspeceMonstre" as Zone_EspeceMonstre {
  * zone_id : INT <<PK>> <<FK>>
  * espece_id : INT <<PK>> <<FK>>
}

entity "IndividuMonstre" as IndividuMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  niveau : INT
  attaque : INT
  defense : INT
  vitesse : INT
  attaqueSpe : INT
  defenseSpe : INT
  pvMax : INT
  potentiel : DECIMAL
  exp : DECIMAL
  pv : INT
  --
  fk_espece_id : INT <<FK>>
  fk_entraineur_equipe_id : INT <<FK>>
  fk_entraineur_boite_id : INT <<FK>>
}

'--------------------------------------------------
' Relations
'--------------------------------------------------

Entraineur ||--o{ IndividuMonstre : "possède (équipe)"
Entraineur ||--o{ IndividuMonstre : "possède (boîte)"
EspeceMonstre ||--o{ IndividuMonstre : "appartient à"
Zone ||--o{ Zone_EspeceMonstre : "contient"
EspeceMonstre ||--o{ Zone_EspeceMonstre : "apparaît dans"

@enduml
